//    Copyright 2019 Google Inc.
//
//    Licensed under the Apache License, Version 2.0 (the "License");
//    you may not use this file except in compliance with the License.
//    You may obtain a copy of the License at
//
//        https://www.apache.org/licenses/LICENSE-2.0
//
//    Unless required by applicable law or agreed to in writing, software
//    distributed under the License is distributed on an "AS IS" BASIS,
//    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//    See the License for the specific language governing permissions and
//    limitations under the License.

syntax = "proto3";

package google.fhir.r4.core;

import "google/protobuf/any.proto";
import "proto/google/fhir/proto/annotations.proto";
import "proto/google/fhir/proto/r4/core/codes.proto";
import "proto/google/fhir/proto/r4/core/datatypes.proto";

option java_multiple_files = true;
option java_package = "com.google.fhir.r4.core";
option go_package = "github.com/google/fhir/go/proto/google/fhir/proto/r4/core/profiles/observation_oxygensat_go_proto";
option (.google.fhir.proto.fhir_version) = R4;

// Auto-generated from StructureDefinition for observation-oxygensat.
// FHIR Oxygen Saturation Profile.
// See http://hl7.org/fhir/StructureDefinition/oxygensat
message ObservationOxygensat {
  option (.google.fhir.proto.structure_definition_kind) = KIND_RESOURCE;
  option (.google.fhir.proto.fhir_profile_base) =
      "http://hl7.org/fhir/StructureDefinition/vitalsigns";
  option (.google.fhir.proto.fhir_profile_base) =
      "http://hl7.org/fhir/StructureDefinition/Observation";
  option (.google.fhir.proto.fhir_structure_definition_url) =
      "http://hl7.org/fhir/StructureDefinition/oxygensat";
  option (.google.fhir.proto.fhir_path_message_constraint) =
      "dataAbsentReason.empty() or value.empty()";
  option (.google.fhir.proto.fhir_path_message_constraint) =
      "value.empty() or component.code.where(coding.intersect(%resource.code.coding).exists()).empty()";
  option (.google.fhir.proto.fhir_path_message_constraint) =
      "(component.empty() and hasMember.empty()) implies (dataAbsentReason.exists() or value.exists())";
  option (.google.fhir.proto.search_parameter) = {
    name: "amino-acid-change"
    type: STRING
    expression: "Observation.extension('http://hl7.org/fhir/StructureDefinition/observation-geneticsAminoAcidChangeName')"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "based-on"
    type: REFERENCE
    expression: "Observation.basedOn"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "category"
    type: TOKEN
    expression: "Observation.category"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "code"
    type: TOKEN
    expression: "AllergyIntolerance.code | AllergyIntolerance.reaction.substance | Condition.code | (DeviceRequest.code as CodeableConcept) | DiagnosticReport.code | FamilyMemberHistory.condition.code | List.code | Medication.code | (MedicationAdministration.medication as CodeableConcept) | (MedicationDispense.medication as CodeableConcept) | (MedicationRequest.medication as CodeableConcept) | (MedicationStatement.medication as CodeableConcept) | Observation.code | Procedure.code | ServiceRequest.code"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "code-value-concept"
    type: COMPOSITE
    expression: "Observation"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "code-value-date"
    type: COMPOSITE
    expression: "Observation"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "code-value-quantity"
    type: COMPOSITE
    expression: "Observation"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "code-value-string"
    type: COMPOSITE
    expression: "Observation"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "combo-code"
    type: TOKEN
    expression: "Observation.code | Observation.component.code"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "combo-code-value-concept"
    type: COMPOSITE
    expression: "Observation | Observation.component"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "combo-code-value-quantity"
    type: COMPOSITE
    expression: "Observation | Observation.component"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "combo-data-absent-reason"
    type: TOKEN
    expression: "Observation.dataAbsentReason | Observation.component.dataAbsentReason"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "combo-value-concept"
    type: TOKEN
    expression: "(Observation.value as CodeableConcept) | (Observation.component.value as CodeableConcept)"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "combo-value-quantity"
    type: QUANTITY
    expression: "(Observation.value as Quantity) | (Observation.value as SampledData) | (Observation.component.value as Quantity) | (Observation.component.value as SampledData)"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "component-code"
    type: TOKEN
    expression: "Observation.component.code"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "component-code-value-concept"
    type: COMPOSITE
    expression: "Observation.component"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "component-code-value-quantity"
    type: COMPOSITE
    expression: "Observation.component"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "component-data-absent-reason"
    type: TOKEN
    expression: "Observation.component.dataAbsentReason"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "component-value-concept"
    type: TOKEN
    expression: "(Observation.component.value as CodeableConcept)"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "component-value-quantity"
    type: QUANTITY
    expression: "(Observation.component.value as Quantity) | (Observation.component.value as SampledData)"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "data-absent-reason"
    type: TOKEN
    expression: "Observation.dataAbsentReason"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "date"
    type: DATE
    expression: "AllergyIntolerance.recordedDate | CarePlan.period | CareTeam.period | ClinicalImpression.date | Composition.date | Consent.dateTime | DiagnosticReport.effective | Encounter.period | EpisodeOfCare.period | FamilyMemberHistory.date | Flag.period | Immunization.occurrence | List.date | Observation.effective | Procedure.performed | (RiskAssessment.occurrence as dateTime) | SupplyRequest.authoredOn"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "derived-from"
    type: REFERENCE
    expression: "Observation.derivedFrom"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "device"
    type: REFERENCE
    expression: "Observation.device"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "dna-variant"
    type: STRING
    expression: "Observation.extension('http://hl7.org/fhir/StructureDefinition/observation-geneticsDnaVariant')"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "encounter"
    type: REFERENCE
    expression: "Composition.encounter | DeviceRequest.encounter | DiagnosticReport.encounter | DocumentReference.context.encounter | Flag.encounter | List.encounter | NutritionOrder.encounter | Observation.encounter | Procedure.encounter | RiskAssessment.encounter | ServiceRequest.encounter | VisionPrescription.encounter"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "focus"
    type: REFERENCE
    expression: "Observation.focus"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "gene-amino-acid-change"
    type: STRING
    expression: "Observation.extension('http://hl7.org/fhir/StructureDefinition/observation-geneticsAminoAcidChangeName')"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "gene-dnavariant"
    type: STRING
    expression: "Observation.extension('http://hl7.org/fhir/StructureDefinition/observation-geneticsDnaVariant')"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "gene-identifier"
    type: TOKEN
    expression: "Observation.extension('http://hl7.org/fhir/StructureDefinition/observation-geneticsGene')"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "has-member"
    type: REFERENCE
    expression: "Observation.hasMember"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "identifier"
    type: TOKEN
    expression: "AllergyIntolerance.identifier | CarePlan.identifier | CareTeam.identifier | Composition.identifier | Condition.identifier | Consent.identifier | DetectedIssue.identifier | DeviceRequest.identifier | DiagnosticReport.identifier | DocumentManifest.masterIdentifier | DocumentManifest.identifier | DocumentReference.masterIdentifier | DocumentReference.identifier | Encounter.identifier | EpisodeOfCare.identifier | FamilyMemberHistory.identifier | Goal.identifier | ImagingStudy.identifier | Immunization.identifier | List.identifier | MedicationAdministration.identifier | MedicationDispense.identifier | MedicationRequest.identifier | MedicationStatement.identifier | NutritionOrder.identifier | Observation.identifier | Procedure.identifier | RiskAssessment.identifier | ServiceRequest.identifier | SupplyDelivery.identifier | SupplyRequest.identifier | VisionPrescription.identifier"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "method"
    type: TOKEN
    expression: "Observation.method"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "part-of"
    type: REFERENCE
    expression: "Observation.partOf"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "patient"
    type: REFERENCE
    expression: "AllergyIntolerance.patient | CarePlan.subject.where(resolve() is Patient) | CareTeam.subject.where(resolve() is Patient) | ClinicalImpression.subject.where(resolve() is Patient) | Composition.subject.where(resolve() is Patient) | Condition.subject.where(resolve() is Patient) | Consent.patient | DetectedIssue.patient | DeviceRequest.subject.where(resolve() is Patient) | DeviceUseStatement.subject | DiagnosticReport.subject.where(resolve() is Patient) | DocumentManifest.subject.where(resolve() is Patient) | DocumentReference.subject.where(resolve() is Patient) | Encounter.subject.where(resolve() is Patient) | EpisodeOfCare.patient | FamilyMemberHistory.patient | Flag.subject.where(resolve() is Patient) | Goal.subject.where(resolve() is Patient) | ImagingStudy.subject.where(resolve() is Patient) | Immunization.patient | List.subject.where(resolve() is Patient) | MedicationAdministration.subject.where(resolve() is Patient) | MedicationDispense.subject.where(resolve() is Patient) | MedicationRequest.subject.where(resolve() is Patient) | MedicationStatement.subject.where(resolve() is Patient) | NutritionOrder.patient | Observation.subject.where(resolve() is Patient) | Procedure.subject.where(resolve() is Patient) | RiskAssessment.subject.where(resolve() is Patient) | ServiceRequest.subject.where(resolve() is Patient) | SupplyDelivery.patient | VisionPrescription.patient"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "performer"
    type: REFERENCE
    expression: "Observation.performer"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "specimen"
    type: REFERENCE
    expression: "Observation.specimen"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "status"
    type: TOKEN
    expression: "Observation.status"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "subject"
    type: REFERENCE
    expression: "Observation.subject"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "value-concept"
    type: TOKEN
    expression: "(Observation.value as CodeableConcept)"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "value-date"
    type: DATE
    expression: "(Observation.value as dateTime) | (Observation.value as Period)"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "value-quantity"
    type: QUANTITY
    expression: "(Observation.value as Quantity) | (Observation.value as SampledData)"
  };
  option (.google.fhir.proto.search_parameter) = {
    name: "value-string"
    type: STRING
    expression: "(Observation.value as string) | (Observation.value as CodeableConcept).text"
  };

  // Logical id of this artifact
  Id id = 1;

  // Metadata about the resource
  Meta meta = 2;

  // A set of rules under which this content was created
  Uri implicit_rules = 3;

  // Language of the resource content
  Code language = 4;

  // Text summary of the resource, for human interpretation
  Narrative text = 5;

  // Contained, inline Resources
  repeated protobuf.Any contained = 6;

  // Field 7 reserved for strongly-typed ContainedResource for id:
  // Observation.contained
  reserved 7;

  // Additional content defined by implementations
  repeated Extension extension = 8;

  // Extensions that cannot be ignored
  repeated Extension modifier_extension = 9;

  // Business Identifier for observation
  repeated Identifier identifier = 10;

  // Fulfills plan, proposal or order
  repeated Reference based_on = 11 [
    (.google.fhir.proto.valid_reference_type) = "CarePlan",
    (.google.fhir.proto.valid_reference_type) = "DeviceRequest",
    (.google.fhir.proto.valid_reference_type) = "ImmunizationRecommendation",
    (.google.fhir.proto.valid_reference_type) = "MedicationRequest",
    (.google.fhir.proto.valid_reference_type) = "NutritionOrder",
    (.google.fhir.proto.valid_reference_type) = "ServiceRequest"
  ];

  // Part of referenced event
  repeated Reference part_of = 12 [
    (.google.fhir.proto.valid_reference_type) = "MedicationAdministration",
    (.google.fhir.proto.valid_reference_type) = "MedicationDispense",
    (.google.fhir.proto.valid_reference_type) = "MedicationStatement",
    (.google.fhir.proto.valid_reference_type) = "Procedure",
    (.google.fhir.proto.valid_reference_type) = "Immunization",
    (.google.fhir.proto.valid_reference_type) = "ImagingStudy"
  ];

  // registered | preliminary | final | amended +
  message StatusCode {
    option (.google.fhir.proto.structure_definition_kind) = KIND_PRIMITIVE_TYPE;
    option (.google.fhir.proto.fhir_valueset_url) =
        "http://hl7.org/fhir/ValueSet/observation-status";
    option (.google.fhir.proto.fhir_profile_base) =
        "http://hl7.org/fhir/StructureDefinition/code";

    ObservationStatusCode.Value value = 1;

    String id = 2;

    repeated Extension extension = 3;
  }
  StatusCode status = 13
      [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

  // Classification of  type of observation
  repeated CodeableConcept category = 14
      [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

  // Oxygen Saturation
  message CodeableConceptForCode {
    option (.google.fhir.proto.fhir_profile_base) =
        "http://hl7.org/fhir/StructureDefinition/CodeableConcept";

    // Unique id for inter-element referencing
    String id = 1;

    // Additional content defined by implementations
    repeated Extension extension = 2;

    // Code defined by a terminology system
    repeated Coding coding = 3;

    // Plain text representation of the concept
    String text = 4;

    CodingWithFixedCode oxygen_sat_code = 5 [
      (.google.fhir.proto.fhir_inlined_coding_system) = "http://loinc.org",
      (.google.fhir.proto.fhir_inlined_coding_code) = "2708-6",
      json_name = "OxygenSatCode"
    ];
  }
  CodeableConceptForCode code = 15
      [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

  // Who and/or what the observation is about
  Reference subject = 16 [
    (.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR,
    (.google.fhir.proto.valid_reference_type) = "Patient"
  ];

  // What the observation is about, when it is not about the subject of record
  repeated Reference focus = 17
      [(.google.fhir.proto.valid_reference_type) = "Resource"];

  // Healthcare event during which this observation is made
  Reference encounter = 18
      [(.google.fhir.proto.valid_reference_type) = "Encounter"];

  // Often just a dateTime for Vital Signs
  message EffectiveX {
    option (.google.fhir.proto.fhir_path_message_constraint) =
        "($this as dateTime).toString().length() >= 8";
    option (.google.fhir.proto.is_choice_type) = true;

    oneof choice {
      DateTime date_time = 1;
      Period period = 2;
    }
  }
  EffectiveX effective = 19
      [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

  // Date/Time this version was made available
  Instant issued = 20;

  // Who is responsible for the observation
  repeated Reference performer = 21 [
    (.google.fhir.proto.valid_reference_type) = "Practitioner",
    (.google.fhir.proto.valid_reference_type) = "PractitionerRole",
    (.google.fhir.proto.valid_reference_type) = "Organization",
    (.google.fhir.proto.valid_reference_type) = "CareTeam",
    (.google.fhir.proto.valid_reference_type) = "Patient",
    (.google.fhir.proto.valid_reference_type) = "RelatedPerson"
  ];

  // Vital Signs value are recorded using the Quantity data type. For supporting
  // observations such as Cuff size could use other datatypes such as
  // CodeableConcept.
  message ValueX {
    option (.google.fhir.proto.is_choice_type) = true;

    oneof choice {
      Quantity quantity = 1;
    }
  }
  ValueX value = 22;

  // Why the result is missing
  CodeableConcept data_absent_reason = 23;

  // High, low, normal, etc.
  repeated CodeableConcept interpretation = 24;

  // Comments about the observation
  repeated Annotation note = 25;

  // Observed body part
  CodeableConcept body_site = 26;

  // How it was done
  CodeableConcept method = 27;

  // Specimen used for this observation
  Reference specimen = 28
      [(.google.fhir.proto.valid_reference_type) = "Specimen"];

  // (Measurement) Device
  Reference device = 29 [
    (.google.fhir.proto.valid_reference_type) = "Device",
    (.google.fhir.proto.valid_reference_type) = "DeviceMetric"
  ];

  // Provides guide for interpretation
  message ReferenceRange {
    option (.google.fhir.proto.fhir_path_message_constraint) =
        "low.exists() or high.exists() or text.exists()";

    // Unique id for inter-element referencing
    String id = 1;

    // Additional content defined by implementations
    repeated Extension extension = 2;

    // Extensions that cannot be ignored even if unrecognized
    repeated Extension modifier_extension = 3;

    // Low Range, if relevant
    SimpleQuantity low = 4;

    // High Range, if relevant
    SimpleQuantity high = 5;

    // Reference range qualifier
    CodeableConcept type = 6;

    // Reference range population
    repeated CodeableConcept applies_to = 7;

    // Applicable age range, if relevant
    Range age = 8;

    // Text based reference range in an observation
    String text = 9;
  }
  repeated ReferenceRange reference_range = 30;

  // Used when reporting vital signs panel components
  repeated Reference has_member = 31 [
    (.google.fhir.proto.valid_reference_type) = "QuestionnaireResponse",
    (.google.fhir.proto.valid_reference_type) = "MolecularSequence",
    (.google.fhir.proto.valid_reference_type) = "Observation"
  ];

  // Related measurements the observation is made from
  repeated Reference derived_from = 32 [
    (.google.fhir.proto.valid_reference_type) = "DocumentReference",
    (.google.fhir.proto.valid_reference_type) = "ImagingStudy",
    (.google.fhir.proto.valid_reference_type) = "Media",
    (.google.fhir.proto.valid_reference_type) = "QuestionnaireResponse",
    (.google.fhir.proto.valid_reference_type) = "MolecularSequence",
    (.google.fhir.proto.valid_reference_type) = "Observation"
  ];

  // Used when reporting systolic and diastolic blood pressure.
  message Component {
    option (.google.fhir.proto.fhir_path_message_constraint) =
        "value.exists() or dataAbsentReason.exists()";

    // Unique id for inter-element referencing
    String id = 1;

    // Additional content defined by implementations
    repeated Extension extension = 2;

    // Extensions that cannot be ignored even if unrecognized
    repeated Extension modifier_extension = 3;

    // Type of component observation (code / type)
    CodeableConcept code = 4
        [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

    // Vital Sign Value recorded with UCUM
    message ValueX {
      option (.google.fhir.proto.is_choice_type) = true;

      oneof choice {
        Quantity quantity = 1;
        CodeableConcept codeable_concept = 2;
        String string_value = 3 [json_name = "string"];
        Boolean boolean = 4;
        Integer integer = 5;
        Range range = 6;
        Ratio ratio = 7;
        SampledData sampled_data = 8;
        Time time = 9;
        DateTime date_time = 10;
        Period period = 11;
      }
    }
    ValueX value = 5;

    // Why the component result is missing
    CodeableConcept data_absent_reason = 6;

    // High, low, normal, etc.
    repeated CodeableConcept interpretation = 7;

    // Provides guide for interpretation of component result
    repeated ReferenceRange reference_range = 8;
  }
  repeated Component component = 33;

  // field 34 reserved for Observation.category:VSCat which uses an unsupported
  // slicing on CodeableConcept
  reserved 34;
}
